--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#signin {
+  width: 360px;
+  height: 600px;
+  background-image: url('/images/signin_page.png');
+  text-align: center;
+}
+
+#logo {
+  width: 232px;
+  height: 287px;
+  display: block;
+  padding-top: 15%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#signinButton {
+  display: inline-block;
+  background: white;
+  color: #444;
+  /* width: 190px; */
+  border: thin solid #888;
+  border-radius: 5px;
+  white-space: nowrap;
+  margin-top: 10%;
+}
+span.icon {
+  background: url('/images/googleG.png') transparent 5px 50% no-repeat;
+  background-size: 100%;
+  display: inline-block;
+  vertical-align: middle;
+  width: 42px;
+  height: 42px;
+}
+span.buttonText {
+  display: inline-block;
+  vertical-align: middle;
+  padding-left: 42px;
+  padding-right: 42px;
+  font-size: 14px;
+  font-weight: bold;
+  font-family: 'Roboto', sans-serif;
 }
