--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 360px;
+  height: 600px;
 }
 
 code {
@@ -14,9 +16,9 @@ code {
 }
 
 #signin {
+  background-image: url('/images/signin_page.png');
   width: 360px;
   height: 600px;
-  background-image: url('/images/signin_page.png');
   text-align: center;
 }
 
@@ -33,7 +35,6 @@ code {
   display: inline-block;
   background: white;
   color: #444;
-  /* width: 190px; */
   border: thin solid #888;
   border-radius: 5px;
   white-space: nowrap;
@@ -55,4 +56,33 @@ span.buttonText {
   font-size: 14px;
   font-weight: bold;
   font-family: 'Roboto', sans-serif;
+}
+
+#home {
+  border: 2px solid red;
+}
+#border {
+  border: 2px solid black;
+  text-align: center;
+}
+#txt {
+  display: inline-block;
+  text-align: center;
+}
+span.berries {
+  background-color: #ff5252;
+  width: 50px;
+  height: 30px;
+  display: inline-block;
+  border-radius: 10px;
+  margin-left: 10%;
+}
+#nav {
+  border: 2px solid blue;
+  text-align: center;
+}
+.navTxt {
+  display: inline-block;
+  margin-left: 5%;
+  margin-right: 5%;
 }
