--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
+@font-face {
+  font-family: 'gotham';
+  src: url(./fonts/GothamRndSSm-Bold.otf) format('truetype');
+  font-weight: bold;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 360px;
@@ -68,6 +72,7 @@ span.buttonText {
 #txt {
   display: inline-block;
   text-align: center;
+  font-family: 'gotham';
 }
 span.berries {
   background-color: #ff5252;
@@ -80,9 +85,4 @@ span.berries {
 #nav {
   border: 2px solid blue;
   text-align: center;
-}
-.navTxt {
-  display: inline-block;
-  margin-left: 5%;
-  margin-right: 5%;
 }
