--- a/src/index.css
+++ b/src/index.css
@@ -108,11 +108,24 @@ span.buttonText {
   font-size: 0.8em;
 }
 #navBottom {
-  border: 2px solid blue;
+  position: fixed;
+  width: 360px;
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 7px;
+  box-shadow: 0px -2px 6px -6px black;
 
+  /* test this on chrome extension*/
   /* position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
   background-color: white; */
+}
+
+#calBody {
+  height: 460px;
+}
+#storeBody {
+  height: 460px;
 }
