--- a/src/index.css
+++ b/src/index.css
@@ -123,19 +123,21 @@ span.buttonText {
   background-color: white; */
 }
 
-#calBody {
-  height: 460px;
-}
 #storeBody {
   height: 460px;
 }
 
 
 /* ---------------------------------Start Calendar---------------------------------*/
+/* Main container that holds everything, includes all the other divs*/
 #calBody {
+  height: 460px;
   overflow: scroll;
+  padding-left: 8%;
+
 }
 
+/* styling for h1*/
 #upcomingEvents {
   font-family: AvenirNext-DemiBold;
   font-size: 16px;
@@ -145,7 +147,18 @@ span.buttonText {
 
 }
 
-#eventInfo {
+/* event details with check in button in the same div */
+#eventInfoAndCheckInButton {
+ width: 303px;
+ height: 109px;
+ border-radius: 6px;
+ box-shadow: 0.5px 0.5px 4px 0 rgba(0, 0, 0, 0.1);
+ background-color: #ffffff;
+ margin-bottom: 20px;
+} 
+
+/* event information includes title, time, berries, and people */
+#eventDetails {
   width: 142px;
   height: 70px;
   font-family: AvenirNext;
@@ -156,13 +169,10 @@ span.buttonText {
   line-height: 1.77;
   letter-spacing: 0.2px;
   color: rgba(0, 0, 0, 0.78);
-  width: 303px;
-  height: 109px;
-  border-radius: 6px;
-  box-shadow: 0.5px 0.5px 4px 0 rgba(0, 0, 0, 0.1);
-  background-color: #ffffff;
+  padding-top: 4%;
 }
 
+/* text for number of berries */
 #numberOfBerries {
   font-family: AvenirNext-Bold;
   font-size: 15px;
@@ -171,7 +181,7 @@ span.buttonText {
   text-align: left;  
 }
 
-
+/* Check-in button before checkin in*/
 #checkIn {
   font-family: AvenirNext-DemiBold;
   font-size: 12px;
@@ -183,7 +193,31 @@ span.buttonText {
   width: 77px;
   height: 73px;
   background-color: #9b9b9b;
+  border: 1px solid #979797;
   float: right;
+  margin-top: -65px;
+  margin-right: 15px;
+}
+
+#eventTitleIcon {
+  padding-left: 5px;
+  padding-right: 5px;
+  height: 20%;
+  width: 13%;
+  
+}
+#eventTimeIcon {
+  padding-left: 5px;
+  padding-right: 5px;
+  height: 15%;
+  width: 10%;
+}
+
+#eventBerryIcon {
+  padding-left: 5px;
+  padding-right: 5px;
+  height: 20%;
+  width: 10%;
 }
 
 
