--- a/src/index.css
+++ b/src/index.css
@@ -157,7 +157,7 @@ span.buttonText {
  margin-bottom: 20px;
 } 
 
-/* event information includes title, time, berries, and people */
+/* event info-text includes title, time, berries, and people */
 #eventDetails {
   width: 142px;
   height: 70px;
