--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,19 @@
   font-weight: bold;
 }
 
+@font-face {
+  font-family: 'Roboto Medium', sans-serif;
+  src: url(./fonts/Roboto-Medium.ttf) format('truetype');
+  src: url(./fonts/Roboto-Regular.ttf) format('truetype');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Roboto', sans-serif;
+  src: url(./fonts/Roboto-Regular.ttf) format('truetype');
+  font-weight: normal;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -139,7 +152,7 @@ span.buttonText {
 
 /* styling for h1*/
 #upcomingEvents {
-  font-family: AvenirNext-DemiBold;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   color: rgba(0,0,0,0.78);
   letter-spacing: 0.25px;
@@ -161,8 +174,8 @@ span.buttonText {
 #eventDetails {
   width: 142px;
   height: 70px;
-  font-family: AvenirNext;
-  font-size: 13px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
@@ -174,8 +187,8 @@ span.buttonText {
 
 /* text for number of berries */
 #numberOfBerries {
-  font-family: AvenirNext-Bold;
-  font-size: 15px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
   color: #FFFFFF;
   letter-spacing: 0.2px;
   text-align: left;  
@@ -183,7 +196,7 @@ span.buttonText {
 
 /* Check-in button before checkin in*/
 #checkIn {
-  font-family: AvenirNext-DemiBold;
+  font-family: 'Roboto Medium', sans-serif;
   font-size: 12px;
   color: #FFFFFF;
   letter-spacing: 0.22px;
@@ -191,7 +204,7 @@ span.buttonText {
   line-height: 13px;
   border-radius: 50%;
   width: 77px;
-  height: 73px;
+  height: 77px;
   background-color: #9b9b9b;
   border: 1px solid #979797;
   float: right;
@@ -202,21 +215,21 @@ span.buttonText {
 
 #eventTitleIcon {
   padding-left: 5px;
-  padding-right: 5px;
+  padding-right: 2px;
   height: 20%;
   width: 13%;
   
 }
 #eventTimeIcon {
   padding-left: 5px;
-  padding-right: 5px;
+  padding-right: 2px;
   height: 15%;
   width: 10%;
 }
 
 #eventBerryIcon {
   padding-left: 5px;
-  padding-right: 5px;
+  padding-right: 2px;
   height: 20%;
   width: 10%;
 }
